Changes to properties file

--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -2,7 +2,7 @@ url = https://demo.saloodo.com/
 companyName = AutomationWorld
 firstName = Kulsum
 lastName = Siddiqui
-phoneNo = 123456
+phoneNo = 1234567
 emailID = bhavinpanchal144@gmail.com
 password = Demo@123
 expectedProfileName = KS
